--- a/index1.html
+++ b/index1.html
@@ -9,7 +9,8 @@
         </title>
     </head>
     <body>
-        <div>
+        <div class="div">
+            <img src="прумб.png">
             <form>
                     <label for="username">
                         ПІБ
@@ -33,17 +34,17 @@
                         </a>
                     </button>
             </form>
+            </div>
+            <div class="div0">
             <a href="index0.html">
                 Повернутися назад
             </a>
+            <a href="index2.html">
+                Увійти
+            </a>
         </div>
-        <div>
-        <p>
+        <p class="p">
             Виникли питання або проблеми? Подзвоніть нам по гарячій лінії 0 93 672 45 21
         </p>
-        <a href="index2.html">
-            Увійти
-        </a>
-    </div>
     </body>
 </html>
