--- a/index4.html
+++ b/index4.html
@@ -19,7 +19,7 @@
                 <input type="text"><br>
                 Для грошей<br><br>
                 <input id="answear" type="text"><br>
-                Для цілей (Для бізнесу) або (Для недвіжемості)
+                Для цілей (Для бізнесу) або (Для недвіжемості) (Для пільменій)
             </label>
             <input id="button" type="button" value="Click">
         </form>
